objects/Opinion_Respondent__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>取引先責任者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>意識調査回答者</relationshipLabel>
        <relationshipName>Opinion_Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opinion_Completed_Location__c</fullName>
        <label>回答時位置情報</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Opinion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>意識調査</label>
        <referenceTo>Opinion__c</referenceTo>
        <relationshipLabel>意識調査回答者</relationshipLabel>
        <relationshipName>Opinion_Respondents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respondent_FirstName__c</fullName>
        <label>回答者 名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respondent_LastName__c</fullName>
        <label>回答者 姓</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>意識調査回答者</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ORR-{0000}</displayFormat>
        <label>意識調査回答者番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>